# rust_start

./: .gitignore  README.md
_02variables/: Cargo.toml
_02variables/src/: main.rs
_05_struct/: Cargo.toml
_05_struct/src/: main.rs
_06_emnu/: Cargo.toml
_06_emnu/src/: main.rs
_07/: Cargo.toml
_07/app/: Cargo.toml
_07/lib/: Cargo.toml
_07_module/: Cargo.toml
_07_module/src/: main.rs
_07_restaurant/: Cargo.toml
_07_restaurant/src/: lib.rs  main.rs
_08/: Cargo.toml
_08/hashmap/: Cargo.toml
_08/homework01/: Cargo.toml
_08/string/: Cargo.toml
_08/vec/: Cargo.toml
_09_error/: Cargo.toml
_09_error/panic/: Cargo.toml  hello.txt
_10/: Cargo.toml
_10/scop/: Cargo.toml
_10/syntax/: Cargo.toml
_10/trait/: Cargo.toml
_11/: Cargo.toml
_12_io/: Cargo.toml
_12_io/minigrep/: Cargo.toml
_12_io/minigrep2/: Cargo.toml
_13/: Cargo.toml
_13/closure/: Cargo.toml
_13/minigrep/: poem.txt
_14/: Cargo.toml
_14/art/: Cargo.toml
_15/: Cargo.toml  README.md
_15/box/: Cargo.toml
_15/rccell/: Cargo.toml
_16/: Cargo.toml  README.md
_17/: Cargo.toml  README.md
_17/blog11/: Cargo.toml
_17/blog12/: Cargo.toml
_17/gui2/: Cargo.toml
_17/traitoop/: Cargo.toml
_18/: Cargo.toml  README.md
_19/: Cargo.toml  README.md
_19/fn_advanced/: Cargo.toml
_19/macros_demo/: Cargo.toml
_19/type_advanced/: Cargo.toml
_20/: 404.html  Cargo.toml  README.md
_20/hello/: Cargo.toml
guess_game/: Cargo.toml
guess_game/src/: main.rs
rust01/: Cargo.toml
rust01/assets/: input.html
rust01/src/: content.rs  main.rs  text.rs
(+65 files in other folders)
