[package]
name = "rust01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9"
html_parser = "0.7.0"
csscolorparser = "0.6.2"
clap = { version = "4.3.19", features = ["derive"]}